--- a/PokeStoreClient/app/app.css
+++ b/PokeStoreClient/app/app.css
@@ -14,6 +14,15 @@ h1 {
 
 .pokemons li {
   clear: both;
-  height: 155px;
+  height: 175px;
   padding-top: 15px;
+}
+
+.thumb {
+  float: left;
+  max-height: 100px;
+  margin: -0.5em 1em 1.5em 0;
+  padding-bottom: 1em;
+  padding-right: 1em;
+  max-width: 100px;
 }
